--- a/website/pages/docs/setup.mdx
+++ b/website/pages/docs/setup.mdx
@@ -537,7 +537,13 @@ After installing `typia` like above, and ensuring the `prepare` script is someth
 }
 ```
 
-After this, when running `nx <package-name>:build` it _should_ now output with the Typia transforms applied. But if Typia fails for any reasons (for example it considers some type you have to be invalid), this error is not reported back via Nx. Nx will silent swallow these errors from ts-patch/typia, and you will just not get the output you expect. To debug this, you can create a new task in your `project.json` file similar to the below.
+After this, when running `nx <package-name>:build` it _should_ now output with the Typia transforms applied. **But if Typia fails for any reason** (for example it considers some type you have to be invalid), this error is not reported back via Nx. Nx will silent swallow these errors from ts-patch/typia, and the resulting transpiled code will not have typia transformations applied. This will result in an error such as the following when running you tests that use typia (`nx <package-name>:test`), dev versions of your application (`nx <package-name>:serve`), as well as running your application after building.
+
+```bash filename="Terminal"
+Error on typia.createAssert(): no transform has been configured.
+```
+
+To debug whether this is an issue with your setup or simply NX just silently swallowing typia errors, you can create a new task in your `project.json` file similar to the one below.
 
 ```json filename="project.json" showLineNumbers copy
  "targets": {
