--- a/website/pages/docs/index.mdx
+++ b/website/pages/docs/index.mdx
@@ -115,10 +115,9 @@ export function random<T>(g?: Partial<IRandomGenerator>): T;
 <iframe src="https://www.youtube.com/embed/WM6LGy2UU6s?si=lZrqbILxHI22QwEE" 
         title="Typia Tutorial Video" 
         width="100%" 
-        height="500"
-        frameborder="0" 
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" 
-        allowfullscreen></iframe>
+        height="500" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerPolicy="strict-origin-when-cross-origin" 
+        allowFullScreen></iframe>
 
 If you call `typia` function, it would be compiled like below.
 
