--- a/website/pages/docs/llm/chat.mdx
+++ b/website/pages/docs/llm/chat.mdx
@@ -83,9 +83,8 @@ await agent.conversate("Hello, I want to create an article.");
   title="Shopping A.I. Chatbot built with Typia" 
   width="100%" 
   height="600" 
-  frameborder="0" 
-  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" 
-  allowfullscreen 
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerPolicy="strict-origin-when-cross-origin" 
+  allowFullScreen 
 />
 
   - BBS A.I. Chatbot Application: https://nestia.io/chat/bbs
@@ -186,9 +185,8 @@ main().catch(console.error);
         title="Shopping A.I. Chatbot built with Nestia" 
         width="100%" 
         height="600" 
-        frameborder="0" 
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" 
-        allowfullscreen></iframe>
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerPolicy="strict-origin-when-cross-origin" 
+        allowFullScreen></iframe>
 
 - Shopping A.I. Chatbot Application: [https://nestia.io/chat/shopping](/chat/shopping)
 - Shopping Backend Repository: https://github.com/samchon/shopping-backend
