`unplugin-typia`, npm instead of jsr

--- a/website/pages/docs/setup.mdx
+++ b/website/pages/docs/setup.mdx
@@ -238,7 +238,7 @@ Currently, `unplugin-typia` supports the following bundlers:
 <Tabs items={['npm', 'pnpm', 'yarn', 'bun']}>
   <Tabs.Tab>
 ```bash filename="Terminal" showLineNumbers copy
-npm install -D @ryoppippi/unplugin-typia # via npm
+npm install -D @ryoppippi/unplugin-typia
 
 npm install --save typia
 npx typia setup
