--- a/website/pages/docs/setup.mdx
+++ b/website/pages/docs/setup.mdx
@@ -161,6 +161,7 @@ Firstly install `typia` as a dependency. And then, install `typescript` and `ts-
   "compilerOptions": {
     "strict": true,
     "strictNullChecks": true, 
+    "skipLibCheck": true,
     "plugins": [
       { "transform": "typia/lib/transform" }
     ]
